--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
       .item{
         background: lightblue;
         padding: 10px;
-        border: 1px solid red;
+        border: 1px solid blue;
       }
     </style>
 
   </head>
   <body>
     <section class="container">
-        <div class="item">contenido #1</div>
+        <div class="item">numero    #1</div>
         <div class="item">contenido #2</div>
         <div class="item">contenido #3</div>
         <div class="item">contenido #4</div>
