--- a/Filas/index.html
+++ b/Filas/index.html
@@ -9,8 +9,8 @@
       }
       .container{
         display:grid;
-        grid-template-columns: 25% 200px 25%;
-        grid-template-rows:300px 300px ;
+        /* grid-template-columns: 25% 200px 25%;
+        grid-template-rows:300px 300px ; */
         grid-template: 300px 300px 100px/ 50% 200px 100%;
       }
       .item{
