--- a/Grid-implicito/index.html
+++ b/Grid-implicito/index.html
@@ -13,7 +13,7 @@
         grid-template-rows:[inicio] 200px [inicio2] 200px [final];
          grid-gap: 5px;
         height: 100vh;
-        /* grid-auto-flow:column; */
+        grid-auto-flow:column;
         /* grid-auto-columns: 200px 200px 200px 200px; */
         grid-auto-rows: 200px 200px 200px 200px;
 
