--- a/platzi/index.html
+++ b/platzi/index.html
@@ -11,6 +11,7 @@
       }
       .hero{
         background:#23475b;
+      /* background-size:100%; */
         color:white;
         padding: 32px 15px;
         display: grid;
@@ -42,7 +43,7 @@
       .form{
         grid-area: form;
         text-align:center;
-        background: rgba(255,255,255,0.9);
+        background: rgba(255,255,255,0.1);
         padding: 1.5em;
         border-radius:10px;
       }
